# near-interpret-wasm

./: .gitignore  Cargo.toml  README.md
contracts/calculations/: Cargo.toml
contracts/calculations-in-wasmi/: Cargo.toml
contracts/calculations-in-wasmi/src/: lib.rs
contracts/calculations-off-chain/: Cargo.toml  README.md
contracts/calculations-off-chain/src/: lib.rs
contracts/calculations/src/: lib.rs
off-chain-benchmarks/: Makefile  README.md
src/: main.rs
