[package]
name = "near-interpret-wasm"
description = "Interpret wasm in wasm and benchmark gas usage"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
comfy-table = "7.0.1"
clap = { version = "4.3.17", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
# Using feature `unstable` for `workspaces::compile_project`.
rust_decimal = "1.30.0"
workspaces = { version = "0.7.0", features = ["unstable"] }
